# ejabberd

./: .cvslog  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .shellcheckrc  .travis.yml  0run  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILE.md  CONTAINER.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  COPYING.md  ChangeLog  Dockerfile  MIGRATION_GUIDE.md  Makefile  Makefile.in  Makefile.win32  PULL_REQUEST_PROPOSAL.md  README  README.md  SECURITY.md  TODO  TODO-vh  Vagrantfile  autogen.sh  bundle  config.rebar.in  config.vars.in  configure  configure.ac  configure.bat  cover.spec  deb-build.sh  ejabberd.cfg.example  ejabberd.doap  (+24 more)
ejabberd-1.1.2/src/: Makefile.win32  XmppAddr.asn1  acl.erl  adhoc.hrl  configure.ac  configure.bat  cyrsasl_anonymous.erl  ejabberd.app  ejabberd.erl  ejabberd_app.erl  ejabberd_auth.erl  ejabberd_auth_external.erl  ejabberd_auth_internal.erl  ejabberd_auth_odbc.erl  ejabberd_c2s.erl  ejabberd_logger_h.erl  ejabberd_receiver.erl  ejabberd_s2s.erl  ejabberd_s2s_out.erl  ejabberd_tmp_sup.erl  ejd2odbc.erl  expat_erl.c  extauth.erl  jlib.erl  jlib.hrl  mod_adhoc.erl  mod_configure.erl  mod_configure2.erl  mod_last.erl  mod_last_odbc.erl  mod_offline_odbc.erl  mod_privacy.erl  mod_stats.erl  mod_time.erl  mod_vcard.erl  mod_vcard_ldap.erl  mod_vcard_odbc.erl  mod_version.erl  sha.erl  xml.erl
src/: ELDAPv3.asn1db  ELDAPv3.erl  Makefile  Makefile.in  Makefile.win32  acinclude.m4  acl.erl  aclocal.m4  acme_challenge.erl  acme_experimental.erl  adhoc.erl  adhoc.hrl  aux.erl  aws_util.erl  beam_util.erl  cache_tab.erl  cache_tab_sup.erl  configure  configure.ac  configure.bat  configure.erl  cyrsasl.erl  cyrsasl.hrl  cyrsasl_anonymous.erl  cyrsasl_digest.erl  cyrsasl_gssapi.erl  cyrsasl_oauth.erl  cyrsasl_plain.erl  cyrsasl_scram.erl  econf.erl  ejabberd.app  ejabberd.app.src  ejabberd.app.src.in  ejabberd.app.src.script  ejabberd.cfg  ejabberd.cfg.example  ejabberd.erl  ejabberd.hrl  ejabberd.init.template  ejabberd_access_permissions.erl  (+521 more)
src/ejabberd_zlib/: Makefile.in  Makefile.win32  ejabberd_zlib.erl  ejabberd_zlib_drv.c
src/eldap/: ELDAPv3.erl  ELDAPv3.hrl  Makefile.in  Makefile.win32  eldap.erl  eldap.hrl  eldap_filter.erl  eldap_filter_yecc.yrl  eldap_pool.erl  eldap_utils.erl
src/eredis/: .travis.yml  AUTHORS  CHANGELOG.md  Makefile.in  README.md  rebar  rebar.config
src/mod_irc/: Makefile  Makefile.in  Makefile.win32  iconv.erl  iconv_erl.c  mod_irc.erl  mod_irc_connection.erl  mod_irc_odbc.erl
src/mod_muc/: Makefile  Makefile.in  Makefile.win32  mod_muc.erl  mod_muc_hook.erl  mod_muc_log.erl  mod_muc_odbc.erl  mod_muc_room.erl  mod_muc_room.hrl
src/mod_proxy65/: Makefile.in  Makefile.win32  TODO  mod_proxy65.erl  mod_proxy65.hrl  mod_proxy65_http.erl  mod_proxy65_lib.erl  mod_proxy65_service.erl  mod_proxy65_sm.erl  mod_proxy65_stream.erl
src/mod_pubsub/: Makefile  Makefile.in  Makefile.win32  gen_pubsub_node.erl  gen_pubsub_nodetree.erl  mod_pubsub.erl  mod_pubsub_minimal.erl  mod_pubsub_odbc.erl  node.template  node_buddy.erl  node_club.erl  node_dag.erl  node_default.erl  node_dispatch.erl  node_flat.erl  node_flat_odbc.erl  node_hometree.erl  node_hometree_odbc.erl  node_mb.erl  node_pep.erl  node_pep_odbc.erl  node_private.erl  node_public.erl  node_zoo.erl  nodetree_dag.erl  nodetree_default.erl  nodetree_tree.erl  nodetree_tree_odbc.erl  nodetree_virtual.erl  pubsub.hrl  pubsub_clean.erl  pubsub_db_odbc.erl  pubsub_debug.erl  pubsub_index.erl  pubsub_odbc.patch  pubsub_subscription.erl  pubsub_subscription_odbc.erl
src/mod_pubsub_ng/: Makefile.in  exmpp_pubsub.erl  mod_pubsub_dev.erl  node_flat_dev.erl  pubsub_api.hrl  pubsub_broadcast.erl  pubsub_core.erl  pubsub_db.erl  pubsub_db_mnesia.erl  pubsub_dev.hrl  pubsub_disco.erl  pubsub_groups.erl  pubsub_hooks.erl  pubsub_index_dev.erl  pubsub_options.erl  pubsub_parser.erl  pubsub_tools.erl
src/msgs/: ca.msg  ca.po  cs.msg  cs.po  de.msg  de.po  ejabberd.pot  el.msg  el.po  eo.msg  eo.po  es.msg  es.po  fr.msg  fr.po  gl.msg  gl.po  he.po  id.msg  id.po  it.msg  it.po  ja.msg  ja.po  nl.msg  nl.po  no.msg  no.po  pl.msg  pl.po  pt-br.msg  pt-br.po  pt.msg  pt.po  ru.msg  ru.po  sk.msg  sk.po  sv.msg  sv.po  (+14 more)
src/mysql/: COPYING  Makefile.in  mysql.erl  mysql_auth.erl  mysql_conn.erl  mysql_recv.erl
src/odbc/: Makefile.in  Makefile.win32  ejabberd_odbc.erl  ejabberd_odbc_sup.erl  mssql.sql  mssql2000.sql  mssql2005.sql  mysql.sql  odbc_queries.erl  pg.sql
src/pam/: Makefile.in  epam.c  epam.erl
src/pgsql/: pgsql.erl  pgsql_proto.erl  pgsql_tcp.erl  pgsql_util.erl
src/stringprep/: Makefile  Makefile.in  Makefile.win32  dumpgroups.c  stringprep.erl  stringprep_drv.c  stringprep_sup.erl  uni_data.c  uni_norm.c  uni_parse.tcl  uni_parse2.tcl
src/stun/: Makefile.in  Makefile.win32  ejabberd_stun.erl  stun.hrl  stun_codec.erl
src/tls/: Makefile.in  Makefile.win32  sha_drv.c  tls.erl  tls_drv.c
src/web/: Makefile.in  Makefile.win32  bosh.hrl  ejabberd_bosh.erl  ejabberd_http.erl  ejabberd_http.hrl  ejabberd_http1.erl  ejabberd_http_bind.erl  ejabberd_http_bindjson.erl  ejabberd_http_poll.erl  ejabberd_http_ws.erl  ejabberd_http_wsjson.erl  ejabberd_wcs.erl  ejabberd_web.erl  ejabberd_web_admin.erl  ejabberd_web_admin.hrl  ejabberd_websocket.erl  ejabberd_ws.erl  http_bind.hrl  mochijson2.erl  mod_bosh.erl  mod_http_bind.erl  mod_http_bindjson.erl  mod_http_fileserver.erl  mod_http_fileserver_log.erl  mod_register_web.erl  pshb_http.erl  simple_ws_check.erl  websocket_test.erl  xmpp_json.erl
src/win32/: CheckReqs.ini  CheckReqs1.ini  CheckReqs1H.ini  CheckUser.ini  CheckUserH.ini  ejabberd.cfg  ejabberd.nsh  ejabberd.nsi
tsung-1.3.3/: CHANGES  CONTRIBUTORS  LISEZMOI  Makefile  Makefile.in  README  TODO  acinclude.m4  config.guess  config.status  configure  configure.in  tsung-1.0.dtd  tsung-recorder.sh.in  tsung.sh.in  tsung.spec.in
tsung-1.3.3/autom4te.cache/: output.0  requests  traces.0
tsung-1.3.3/debian/: changelog  control  copyright  docs  rules  tsung.dirs
tsung-1.3.3/doc/: Design.txt  Design_fr.txt  IDXDOC.css  Jabber.txt  Makefile  tsplot.1  (+9 more)
(+1151 files in other folders)
